@@ -1,5 +1,11 @@
 2008-12-05  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/jamendo/jamendo.glade:
+	* src/plugins/jamendo/jamendo.py: Corrected previous
+	commits, patch from David JEAN LOUIS <izimobil@gmail.com>
+
+2008-12-05  Bastien Nocera  <hadess@hadess.net>
+
 	* data/mime-type-list.txt: We also support SID files,
 	patch from Robin Sonefors <ozamosi@flukkost.nu>
 	(Closes: #559953)
